[package]
name = "home_mng"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-coap = { git = "https://github.com/google/rust-async-coap.git", ref = "71245d4" }
futures = "0.3"
socket2 = "0.4"
serde_cbor = "0.10"
clap = "3.0.0-beta.5"
pnet = "0.28"
ipnetwork = "0.18"
