[package]
name = "home_mng"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: Create CLI feature and use dependencies only when needed

[dependencies]
coap = { git = "https://github.com/hubertmis/coap-rs.git", branch = "dev/home_mng" }
coap-lite = "0.11.3"
futures = "0.3"
tokio = {version = "^1.32", features = ["full"] }
socket2 = "0.4"
ciborium = "0.2"
clap = { version = "4.5.0", features = ["derive"] }
pnet = "0.28"
ipnetwork = "0.18"
