[package]
name = "home_mng"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# TODO: Create CLI feature and use dependencies only when needed

[dependencies]
ciborium = "0.2"
clap = { version = "4.5.0", features = ["derive"] }
coap = "0.19"
coap-lite = "0.11.3"
futures = "0.3"
ipnetwork = "0.18"
pnet = "0.28"
socket2 = "0.4"
tokio = {version = "^1.32", features = ["full"] }
